# rpki-client-portable

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  TODO  VERSION  build_libtls.sh  configure  configure.ac  dist.sh  update.sh
.github/workflows/: build.yaml  codeql-analysis.yaml  coverity.yaml
compat/: Makefile.am  Makefile.in  a_time_tm.c  bsd-b64_pton.c  cms_lib.c  crypto_init.c  getentropy_aix.c  getentropy_hpux.c  getentropy_linux.c  imsg.c  pipe2.c  pledge.c  ppoll.c  socket.c  unveil.c  unveil_landlock.c  x509_crl_get0_tbs_sigalg.c  x509_get0_uids.c  x509_purp.c
include/: Makefile.am  Makefile.in  endian.h  libgen.h  poll.h  resolv.h  sha2.h  signal.h  stdlib.h  string.h  unistd.h
include/arpa/: inet.h
include/openssl/: asn1.h  cms.h  crypto.h  safestack.h  x509.h  x509v3.h
include/sys/: socket.h  stat.h  time.h
patches/: 0001-Allow-overriding-default-user-and-file-locations.patch  0002-Apply-placeholders-for-portability-shim.patch  0003-Emit-all-formats.patch  0003-Emit-all-output-formats-on-non-OpenBSD-systems.patch  0003-Instead-of-using-the-kind-of-hidden-b64_pton-from-li.patch  0004-Only-call-tls_config_set_ca_mem-when-pledge-is-used.patch  0004-Use-correct-way-to-report-error-when-strtonum-fails.patch  0005-Rewrite-the-signal-handler-to-just-toggle-a-flag-and.patch  0006-In-OpenSSL-1.1.x-EVP_ENCODE_CTX-is-an-opaque-struct-.patch  output.c.patch
src/: Makefile.am
src/rpki-client/: Makefile.am  Makefile.in  output.c
